# bazel-demo-pyapp-with-cppext-dep

./: .gitignore  MODULE.bazel
pyapp/: BUILD.bazel  app.py
